changes before clicking on pictures

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,6 +8,10 @@ img {
 	width: 200px;
 	height: 200px;
 }
+#fish-form {
+	float: right;
+	margin-right: 15%;
+}
 .fish-item {
 	display: inline-block;
 }
