--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,8 +3,8 @@ body { /* Visual */
 	url("../images/ocean.jpg") no-repeat center center fixed;
   font-family: 'Open Sans', sans-serif;
   color: white;
- /* width:100%;
-  height:100%;  */
+  width:100%;
+  height:100%;  
 }
 h1{
 	font-size: 4em;
@@ -31,7 +31,7 @@ button {
     border-radius: 25px;
     background-color: green;  */
     border: 2px solid #a1a1a1;
-    padding: 1em 2em; 
+    padding: .6em .6em; 
     background: #dddddd;
     border-radius: 1em;
     background-color: green;
@@ -42,14 +42,14 @@ button:hover {
 }
 
 #fish-form {
-    padding: 5px 5px;   
+    padding: 1em 1em;   
     background: #dddddd;
- /*   border-radius: 5px;	  */
+    border-radius: 1em;
     border-radius: .5em;	
     background-color: blue;
 	opacity: 0.6;
-    width: 30%;
-	margin-left: 1em;
+    width: 50%;
+/*	margin-left: 1em;  */
 }
 
 #add-fish {
@@ -66,6 +66,7 @@ button:hover {
 
 #fish-input {
 	color: black;
+	size: 3em;
 }
 /*#fish-form {
 	float: right;  
